show.html.erb   中文

--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -8,59 +8,54 @@
       <div class="skew">
         <div class="container">
           <h1>
-            Love Vegan          
+            热爱素食生活         
           </h1>
         </div>
       </div>
     </header>
     <section class="page basic">  
       <div class="container">
-
         <div class="page-content">
-
           <div class="custom-breadcrumbs">
             <h2 class="element-invisible">You are here</h2>
-            <div class="breadcrumb"><a href="/">Home</a> » <a href="/whats-new">What's New?</a> » <a href="/whats-new/campaigns">Campaigns</a>
-            </div> » Love Vegan            
+            <div class="breadcrumb"><a href="/">首页</a> » <a href="/whats-new">什么是新的?</a> » <a href="/whats-new/campaigns">活动</a>
+            </div> » 热爱素食生活              
           </div>
-
           <div class="region region-content">
-
             <div id="node-766" class="node node-campaign node-promoted node-full clearfix" about="/whats-new/campaigns/love-vegan" typeof="sioc:Item foaf:Document">
-
               <div class="content clearfix">
                 <div class="field field-name-body field-type-text-with-summary field-label-hidden">
                   <div class="field-items">
                     <div class="field-item even" property="content:encoded">
-                      <h2>Set yourself free from stereotypes<a href="login/LV_Kiss_385.jpg" target="_blank"><%= image_tag "login/LV_Kiss_385.jpg", width: 320, height: 452, style: "float: right;", class: "right" %></a></h2>
-                      <p>You probably know a vegan. Chances are you’ve talked to them already today. Heck, you may even be sitting behind one right now.</p>
-                      <p>But you’d never have guessed it. There’s no such thing as a 'typical' vegan. There’s no dress code. No lingo. Just a few hundred thousand people who are choosing to live a good life – their own way.</p>
-                      <p>More than that, veganism is actually a protected belief under the Equality Act 2010. So we’re saying our last goodbyes to lettuce sandwiches: a new era of veganism is dawning.</p>
-                      <h2>Fall in love with vegan living</h2>
-                      <p>There’s just something about vegan living that really gets you excited, but you can’t quite put your finger on it. Ready to hear the big secret?</p>
-                      <blockquote><p>"You don’t have to be vegan to love vegan things"</p>
+                      <h2>让自己免于俗套<a href="login/LV_Kiss.jpg" target="_blank"><%= image_tag "login/LV_Kiss_385.jpg", width: 320, height: 452, style: "float: right;", class: "right" %></a></h2>
+                      <p>你或许认识素食主义者。今天，你有可能已经和他们交谈过。或许，现在坐在你后面的那位就是。</p>
+                      <p>但你永远也猜不着。世界上并不存在“典型”素食主义者。他们在着装上并没有什么统一的要求，也没有相应的行话。在我们周围，有成百上千的人选择以自己的方式来让生活变得更好。</p>
+                      <p>更重要的是，根据2010年颁布的《平等法》，素食主义实际上是一种受到保护的信念。因此，让我们向生菜三明治说声再见：新素食主义的时代到来了！</p>
+                      <h2>爱上素食生活</h2>
+                      <p>素食生活当中的某些东西或许已经让你倍感兴奋，但具体是什么你却说不清楚。那么，你准备好倾听与素食生活有关的巨大秘密了吗？</p>
+                      <blockquote><p>“你不一定非要成为素食主义者，才可以喜欢素食东西”</p>
                       </blockquote>
-                      <p><a href="login/LV_Run.jpg" target="_blank"><%= image_tag "login/LV_Run_385.jpg", width: 320, height: 452, style: "float: left;", class: "left" %></a>Hundreds of thousands of people already enjoy vegan food, vegan shoes, vegan soap, and vegan pretty much everything. Beginning to replace some non-vegan items with vegan products will see you living your life closer to the values you already hold – and closer to <em>The Vegan Society</em>’s vision of a world in which humans do not exploit other animals. Once you begin, the transition will be a breeze. </p>
+                      <p><a href="login/LV_Run.jpg" target="_blank"><%= image_tag "login/LV_Run_385.jpg", width: 320, height: 452, style: "float: left;", class: "left" %></a>已经有成千上万的人在食用素食，穿素食鞋，使用素食肥皂，以及其他与<em>素食</em>有关的东西。试着将一些非素食的东西换成素食的东西，会让自己的生活更接近自身所持的理念，更接近纯素食协会所倡导的愿景-“让人类不再利用动物”。一旦你开始尝试素食生活，那么接下来就简单了。而你的生活将会因为这一转变，如沐春风。</p>
 
-                      <h2>Where will your choices take you?</h2>
-                      <p>Many products you love are vegan already. Isn’t it time you experimented with some new stuff? We know you care about animals, the environment, and your health. The great news is that vegan living is getting easier and easier. Look out for over 16,000 products registered with our <a href="/your-business/trademark-showcase" target="_blank">Vegan Trademark</a> worldwide. See at a glance that the product contains no animal ingredients and has not been tested on animals. What’s not to love?</p>
-                      <p>Obviously, if you’re ready to take the plunge and embrace vegan living to the full right away, then three cheers for you! Check our <a href="/resources" target="_blank">Resources</a> section for ideas and support.&nbsp;</p>
-                      <p>But if you’re not about to go vegan anytime soon, don’t let that stop you from bringing the vegan products you know and love into your life more regularly. Then, when the time comes to try going vegan for real, you’ll make it look easy.&nbsp;</p>
-                      <h2>Already smitten?</h2>
-                      <p>Vegans have all the fun. But let’s not keep it to ourselves – we have an entire planet to save.&nbsp;Share the love with everyone you know (hint: by joining our campaign) and help inspire more people to go vegan.&nbsp;</p>
-                      <h2>Join the campaign<a href="/sites/default/files/LV_Eat.jpg" target="_blank"><%= image_tag "login/LV_Run_385.jpg", width: 320, height: 452, style: "float: right;","margin-top: 1px", class: "right" %></a></h2>
-                      <p>See these posters? They need sharing far and wide on social media. Already, people have been getting in touch with us to say how much they love to eat vegan food and wear vegan lipstick, and (this is the best bit) <em>how they’ll be thinking more about their shopping choices as a result of this campaign</em>. Ka-ching! That’s what we like to hear.</p>
-                      <p>Can you help us to connect with a wider audience? Here’s what we'd love you to do:</p>
-                      <ul><li>save your favourite poster from this page (or all of them if you can’t decide!)</li>
-                        <li>upload them to all your favourite social media channels with your own message</li>
-                        <li>keep us in the loop through&nbsp;our&nbsp;<a href="https://www.facebook.com/TheVeganSociety" target="_blank">Facebook</a>&nbsp;page or&nbsp;<a href="https://twitter.com/TheVeganSociety" target="_blank">tweet</a>&nbsp;with&nbsp;#LoveVegan</li>
-                      </ul><p>Or, simply click the Facebook and Twitter icons below to share a link to this page.&nbsp;</p>
-                      <p>Already shared the posters? Fancy doing more?</p>
-                      <ul><li>Make a <a href="/take-action/donate" target="_blank">donation</a></li>
-                        <li>Become a <a href="/node/4/join-us" target="_blank">member</a></li>
-                        <li><a href="/take-action/volunteer" target="_blank">Volunteer</a> with us</li>
+                      <h2>从哪里开始你的素食生活？</h2>
+                      <p>许多你喜欢的产品其实本身就是素食。不过你现在是时候尝试一些新的产品了。我们知道你很关心动物、环境和自身的健康。一个好消息是，素食生活正变得越来越容易。现在全世界有16,000多种产品已经注册了我们的。 <a href="/your-business/trademark-showcase" target="_blank">素食商标</a>购买产品的时候，看一眼那些不包含动物成分，没有用动物来进行试验的产品。还有什么理由不爱素食生活呢？</p>
+                      <p显然，如果你已经鼓足勇气，决定立刻投身于素食生活，那么我们向你喝彩三声！你可以阅读资源<a href="/resources" target="_blank">资源</a>部分的内容来给自己的素食生活提供灵感和指导。&nbsp;</p>
+                      <p>但是，如果你无意立即开始素食生活，也千万不要停下购买你所知道以及热爱的素食产品的脚步，这样也可以让自己的生活更加规律。而当你真正开始素食生活的时候，你就会发现，其实素食生活并没有那么难。&nbsp;</p>
+                      <h2>被打击了吗？</h2>
+                      <p>素食主义者的生活充满了乐趣。但是不要仅仅满足于让自己成为素食主义者-我们需要保护整个地球。将爱分享给你认识的人（注意：通过参加我们组织的活动），并帮助更多的人成为素食主义者。&nbsp;</p>
+                      <h2>参加活动<a href="/origin/LV_Eat.jpg" target="_blank"><%= image_tag "login/LV_Eat_385.jpg", width: 320, height: 452, style: "float: right;","margin-top: 1px", class: "right" %></a></h2>
+                      <p>看见这些海报了吗？我们需要在社交媒体上大加推广。现在有很多人告诉我们，通过参加活动，他们已经喜爱上了素食，平时涂抹素食口红，并且最让人高兴的是，<em>在购物时他们会更多的考虑素食产品</em>！这正是所喜闻乐见的。</p>
+                      <p>你能帮助我们和更多的人取得联系吗？我们希望你能够：</p>
+                      <ul><li>将本页当中你最喜欢的海报保存下来（如果你无法决策，那么你可以将它们全部保存下来！）</li>
+                        <li>将它们上传到你喜欢的社交媒体上，并附上你自己想说的话。</li>
+                        <li>把我们（#LoveVegen）放入你在脸谱网或者推特上的朋友圈。<a href="https://www.facebook.com/TheVeganSociety" target="_blank">Facebook</a>&nbsp;page or&nbsp;<a href="https://twitter.com/TheVeganSociety" target="_blank">tweet</a>&nbsp;with&nbsp;#LoveVegan</li>
+                      </ul><p>或者更简单的，你只需要点击下面的脸谱网和推特的图标，将本页的链接分享到朋友圈中。</p>
+                      <p>你准备好分享这些海报了吗？你想要做更多的事情？</p>
+                      <ul><li><a href="/take-action/donate" target="_blank">捐助本站</a></li>
+                        <li>成为我们的<a href="/node/4/join-us" target="_blank">会员</a></li>
+                        <li>成为我们的<a href="/take-action/volunteer" target="_blank">志愿者</a></li>
                       </ul>
-                      <p>Vegan. It’s for everyone. Have you tried it yet?</p>
+                      <p>素食主义者适合每个人。你尝试了吗？</p>
                     </div>
                   </div>
                 </div>  
@@ -72,28 +67,27 @@
         <aside class="page-sidebar--right">
           <div class="sub-nav"> 
             <div class="region region-sidebar-menu">
-              <h2>What's New?</h2>
+              <h2>什么是新的?</h2>
 
               <div class="menu-block-wrapper menu-block-1 menu-name-main-menu parent-mlid-0 menu-level-2">
-                <ul class="menu clearfix"><li class="first expanded active-trail menu-mlid-2030"><a href="/whats-new/campaigns" title="" class="active-trail">Campaigns</a><ul class="menu clearfix"><li class="first leaf active-trail active menu-mlid-2382"><a href="/whats-new/campaigns/love-vegan" title="" class="active-trail active">Love Vegan</a></li>
-                  <li class="leaf menu-mlid-2547"><a href="/node/671/ask-evidence" title="">Ask for Evidence</a></li>
-                  <li class="leaf menu-mlid-1087"><a href="/whats-new/campaigns/70th-anniversary" title="">70th Anniversary</a></li>
-                  <li class="last leaf menu-mlid-1088"><a href="/whats-new/campaigns/enough-food-everyone-if" title="">Enough Food For Everyone IF</a></li>
+                <ul class="menu clearfix"><li class="first expanded active-trail menu-mlid-2030"><a href="/whats-new/campaigns" title="" class="active-trail">活动</a><ul class="menu clearfix"><li class="first leaf active-trail active menu-mlid-2382"><a href="/whats-new/campaigns/love-vegan" title="" class="active-trail active">热爱素食生活</a></li>
+                  <li class="leaf menu-mlid-2547"><a href="/node/671/ask-evidence" title="">一切基于证据</a></li>
+                  <li class="leaf menu-mlid-1087"><a href="/whats-new/campaigns/70th-anniversary" title="">70周年</a></li>
+                  <li class="last leaf menu-mlid-1088"><a href="/whats-new/campaigns/enough-food-everyone-if" title="">IF 致力于让每个人丰衣足食/a></li>
                 </ul></li>
-                <li class="collapsed menu-mlid-1037"><a href="/whats-new/events" title="">Events</a></li>
-                <li class="last leaf menu-mlid-1916"><a href="/whats-new/jobs" title="">Jobs</a></li>
+                <li class="collapsed menu-mlid-1037"><a href="/whats-new/events" title="">事件</a></li>
+                <li class="last leaf menu-mlid-1916"><a href="/whats-new/jobs" title="">工作</a></li>
               </ul></div>
             </div>
           </div>
           <div class="banner__panel">
             <div class="region region-sidebar-banners">
-              <div id="banner"><a class="link" href="/shop/supplements"><img class="jpg" alt="The Vegan Shop" src="http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png"><%= image_tag "login/VEG1_426_new.png", alt:"The Vegan Shop" %></a>
+              <div id="banner"><a class="link" href="/shop/supplements"><%= image_tag "login/VEG1_426_new.png", alt:"The Vegan Shop" %></a>
               </div>  
             </div>
           </div>        
         </aside>
       </div>
-
     </section>
     <%= render "info_social" %>
     <%= render "footer" %>
