--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -43,7 +43,7 @@
                       <p>但是，如果你无意立即开始素食生活，也千万不要停下购买你所知道以及热爱的素食产品的脚步，这样也可以让自己的生活更加规律。而当你真正开始素食生活的时候，你就会发现，其实素食生活并没有那么难。&nbsp;</p>
                       <h2>被打击了吗？</h2>
                       <p>素食主义者的生活充满了乐趣。但是不要仅仅满足于让自己成为素食主义者-我们需要保护整个地球。将爱分享给你认识的人（注意：通过参加我们组织的活动），并帮助更多的人成为素食主义者。&nbsp;</p>
-                      <h2>参加活动<a href="/origin/LV_Eat.jpg" target="_blank"><%= image_tag "login/LV_Eat_385.jpg", width: 320, height: 452, style: "float: right;","margin-top: 1px", class: "right" %></a></h2>
+                      <h2>参加活动<a href="/origin/LV_Eat.jpg" target="_blank"><%= image_tag "login/LV_Eat_385.jpg", width: 320, height: 452, style: "float: right; margin-top: 1px", class: "right" %></a></h2>
                       <p>看见这些海报了吗？我们需要在社交媒体上大加推广。现在有很多人告诉我们，通过参加活动，他们已经喜爱上了素食，平时涂抹素食口红，并且最让人高兴的是，<em>在购物时他们会更多的考虑素食产品</em>！这正是所喜闻乐见的。</p>
                       <p>你能帮助我们和更多的人取得联系吗？我们希望你能够：</p>
                       <ul><li>将本页当中你最喜欢的海报保存下来（如果你无法决策，那么你可以将它们全部保存下来！）</li>
