--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -27,7 +27,7 @@
                 <div class="field field-name-body field-type-text-with-summary field-label-hidden">
                   <div class="field-items">
                     <div class="field-item even" property="content:encoded">
-                      <h2>让自己免于俗套<a href="login/LV_Kiss.jpg" target="_blank"><%= image_tag "login/LV_Kiss_385.jpg", width: 320, height: 452, style: "float: right;", class: "right" %></a></h2>
+                      <h2>让自己免于俗套<a href="login/LV_Kiss.jpg" target="_blank"><%= image_tag "origin/LV_Kiss_385.jpg", width: 320, height: 452, style: "float: right;", class: "right" %></a></h2>
                       <p>你或许认识素食主义者。今天，你有可能已经和他们交谈过。或许，现在坐在你后面的那位就是。</p>
                       <p>但你永远也猜不着。世界上并不存在“典型”素食主义者。他们在着装上并没有什么统一的要求，也没有相应的行话。在我们周围，有成百上千的人选择以自己的方式来让生活变得更好。</p>
                       <p>更重要的是，根据2010年颁布的《平等法》，素食主义实际上是一种受到保护的信念。因此，让我们向生菜三明治说声再见：新素食主义的时代到来了！</p>
@@ -35,7 +35,7 @@
                       <p>素食生活当中的某些东西或许已经让你倍感兴奋，但具体是什么你却说不清楚。那么，你准备好倾听与素食生活有关的巨大秘密了吗？</p>
                       <blockquote><p>“你不一定非要成为素食主义者，才可以喜欢素食东西”</p>
                       </blockquote>
-                      <p><a href="login/LV_Run.jpg" target="_blank"><%= image_tag "login/LV_Run_385.jpg", width: 320, height: 452, style: "float: left;", class: "left" %></a>已经有成千上万的人在食用素食，穿素食鞋，使用素食肥皂，以及其他与<em>素食</em>有关的东西。试着将一些非素食的东西换成素食的东西，会让自己的生活更接近自身所持的理念，更接近纯素食协会所倡导的愿景-“让人类不再利用动物”。一旦你开始尝试素食生活，那么接下来就简单了。而你的生活将会因为这一转变，如沐春风。</p>
+                      <p><a href="origin/LV_Run.jpg" target="_blank"><%= image_tag "origin/LV_Run_385.jpg", width: 320, height: 452, style: "float: left;", class: "left" %></a>已经有成千上万的人在食用素食，穿素食鞋，使用素食肥皂，以及其他与<em>素食</em>有关的东西。试着将一些非素食的东西换成素食的东西，会让自己的生活更接近自身所持的理念，更接近纯素食协会所倡导的愿景-“让人类不再利用动物”。一旦你开始尝试素食生活，那么接下来就简单了。而你的生活将会因为这一转变，如沐春风。</p>
 
                       <h2>从哪里开始你的素食生活？</h2>
                       <p>许多你喜欢的产品其实本身就是素食。不过你现在是时候尝试一些新的产品了。我们知道你很关心动物、环境和自身的健康。一个好消息是，素食生活正变得越来越容易。现在全世界有16,000多种产品已经注册了我们的。 <a href="/your-business/trademark-showcase" target="_blank">素食商标</a>购买产品的时候，看一眼那些不包含动物成分，没有用动物来进行试验的产品。还有什么理由不爱素食生活呢？</p>
@@ -43,7 +43,7 @@
                       <p>但是，如果你无意立即开始素食生活，也千万不要停下购买你所知道以及热爱的素食产品的脚步，这样也可以让自己的生活更加规律。而当你真正开始素食生活的时候，你就会发现，其实素食生活并没有那么难。&nbsp;</p>
                       <h2>被打击了吗？</h2>
                       <p>素食主义者的生活充满了乐趣。但是不要仅仅满足于让自己成为素食主义者-我们需要保护整个地球。将爱分享给你认识的人（注意：通过参加我们组织的活动），并帮助更多的人成为素食主义者。&nbsp;</p>
-                      <h2>参加活动<a href="/origin/LV_Eat.jpg" target="_blank"><%= image_tag "login/LV_Eat_385.jpg", width: 320, height: 452, style: "float: right; margin-top: 1px", class: "right" %></a></h2>
+                      <h2>参加活动<a href="/origin/LV_Eat.jpg" target="_blank"><%= image_tag "origin/LV_Eat_385.jpg", width: 320, height: 452, style: "float: right; margin-top: 1px", class: "right" %></a></h2>
                       <p>看见这些海报了吗？我们需要在社交媒体上大加推广。现在有很多人告诉我们，通过参加活动，他们已经喜爱上了素食，平时涂抹素食口红，并且最让人高兴的是，<em>在购物时他们会更多的考虑素食产品</em>！这正是所喜闻乐见的。</p>
                       <p>你能帮助我们和更多的人取得联系吗？我们希望你能够：</p>
                       <ul><li>将本页当中你最喜欢的海报保存下来（如果你无法决策，那么你可以将它们全部保存下来！）</li>
@@ -82,7 +82,7 @@
           </div>
           <div class="banner__panel">
             <div class="region region-sidebar-banners">
-              <div id="banner"><a class="link" href="/shop/supplements"><%= image_tag "login/VEG1_426_new.png", alt:"The Vegan Shop" %></a>
+              <div id="banner"><a class="link" href="/shop/supplements"><%= image_tag "origin/VEG1_426_new.png", alt:"The Vegan Shop" %></a>
               </div>  
             </div>
           </div>        
