show_list_single.html.erb  中文

--- a/app/views/nodes/show_list_single.html.erb
+++ b/app/views/nodes/show_list_single.html.erb
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="page-content">
           <div class="custom-breadcrumbs">
-            <h2 class="element-invisible">You are here</h2><div class="breadcrumb"><a href="/">Home</a> » <a href="/whats-new">What's New?</a></div> » Events            
+            <h2 class="element-invisible">You are here</h2><div class="breadcrumb"><a href="/">首页</a> » <a href="/whats-new">什么是新的？</a></div> » 事件            
           </div>
 
           <div class="block-list list3">
@@ -32,13 +32,13 @@
                     <div class="block-list__inner-container">
 
                       <div class="block-list__date">
-                        <span class="date-display-single" property="dc:date" datatype="xsd:dateTime" content="2014-09-27T00:00:00+01:00">Saturday, 27 September, 2014</span>  
+                        <span class="date-display-single" property="dc:date" datatype="xsd:dateTime" content="2014-09-27T00:00:00+01:00">2014年9月27日 星期六</span>  
                       </div>  
                       <h2 class="block-list__title">
-                        <a href="/whats-new/events/london-vegfest-0">London VegFest</a> 
+                        <a href="/whats-new/events/london-vegfest-0">伦敦 VegFest</a> 
                       </h2> 
                       <div class="block-list__excerpt">
-                        <p><em>The Vegan Society</em> is so excited to be a Guest of Honour at this year's VegfestUK London. We're counting down...<a href="/whats-new/events/london-vegfest-0" class="more-link">(Read More)</a></p> 
+                        <p><em>素食主义者协会</em> 为能成为今年在英国伦敦举行的素食节的荣誉客人而倍感兴奋。我们一直...<a href="/whats-new/events/london-vegfest-0" class="more-link">(Read More)</a></p> 
                       </div>
                     </div>  
                   </div>
@@ -55,18 +55,19 @@
                     <div class="block-list__inner-container">
 
                       <div class="block-list__date">
-                        <span class="date-display-single" property="dc:date" datatype="xsd:dateTime" content="2014-09-27T00:00:00+01:00">Saturday, 27 September, 2014</span>  
+                        <span class="date-display-single" property="dc:date" datatype="xsd:dateTime" content="2014-09-27T00:00:00+01:00">2014年9月27日 星期六</span>  
                       </div>  
                       <h2 class="block-list__title">
-                        <a href="/whats-new/events/london-vegfest-0">London VegFest</a> 
+                        <a href="/whats-new/events/london-vegfest-0">伦敦 VegFest</a> 
                       </h2> 
                       <div class="block-list__excerpt">
-                        <p><em>The Vegan Society</em> is so excited to be a Guest of Honour at this year's VegfestUK London. We're counting down...<a href="/whats-new/events/london-vegfest-0" class="more-link">(Read More)</a></p> 
+                        <p><em>素食主义者协会</em> 为能成为今年在英国伦敦举行的素食节的荣誉客人而倍感兴奋。我们一直...<a href="/whats-new/events/london-vegfest-0" class="more-link">(Read More)</a></p> 
                       </div>
                     </div>  
                   </div>
                 </div>
               </div>
+
 
               
             </div>
@@ -76,19 +77,19 @@
         <aside class="page-sidebar--right">
           <div class="sub-nav"> 
             <div class="region region-sidebar-menu">
-              <h2>What's New?</h2>
+              <h2>什么是新的？</h2>
 
               <div class="menu-block-wrapper menu-block-1 menu-name-main-menu parent-mlid-0 menu-level-2">
-                <ul class="menu clearfix"><li class="first collapsed menu-mlid-2030"><a href="/whats-new/campaigns" title="">Campaigns</a></li>
-                  <li class="expanded active-trail active menu-mlid-1037"><a href="/whats-new/events" title="" class="active-trail active">Events</a><ul class="menu clearfix"><li class="first last leaf menu-mlid-2560"><a href="/node/42/past-events" title="">Past Events</a></li>
+                <ul class="menu clearfix"><li class="first collapsed menu-mlid-2030"><a href="/whats-new/campaigns" title="">活动</a></li>
+                  <li class="expanded active-trail active menu-mlid-1037"><a href="/whats-new/events" title="" class="active-trail active">事件</a><ul class="menu clearfix"><li class="first last leaf menu-mlid-2560"><a href="/node/42/past-events" title="">Past Events</a></li>
                 </ul></li>
-                <li class="last leaf menu-mlid-1916"><a href="/whats-new/jobs" title="">Jobs</a></li>
+                <li class="last leaf menu-mlid-1916"><a href="/whats-new/jobs" title="">工作</a></li>
               </ul></div>
             </div>
           </div>
           <div class="banner__panel">
             <div class="region region-sidebar-banners">
-              <div id="banner"><a class="link" href="/shop/supplements"><img class="jpg" alt="The Vegan Shop" src="http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png"></a></div>  
+              <div id="banner"><a class="link" href="/shop/supplements"><%= image_tag "origin/VEG1_426_new.png", alt:"The Vegan Shop" %></a></div>  
             </div>
           </div>
         </aside>
