show_list_single.html.erb

--- a/app/views/nodes/show_list_single.html.erb
+++ b/app/views/nodes/show_list_single.html.erb
@@ -38,7 +38,7 @@
                         <a href="/whats-new/events/london-vegfest-0">伦敦 VegFest</a> 
                       </h2> 
                       <div class="block-list__excerpt">
-                        <p><em>素食主义者协会</em> 为能成为今年在英国伦敦举行的素食节的荣誉客人而倍感兴奋。我们一直...<a href="/whats-new/events/london-vegfest-0" class="more-link">(Read More)</a></p> 
+                        <p><em>素食主义者协会</em> 为能成为今年在英国伦敦举行的素食节的荣誉客人而倍感兴奋。我们一直...<a href="/whats-new/events/london-vegfest-0" class="more-link">(阅读更多)</a></p> 
                       </div>
                     </div>  
                   </div>
@@ -61,7 +61,7 @@
                         <a href="/whats-new/events/london-vegfest-0">伦敦 VegFest</a> 
                       </h2> 
                       <div class="block-list__excerpt">
-                        <p><em>素食主义者协会</em> 为能成为今年在英国伦敦举行的素食节的荣誉客人而倍感兴奋。我们一直...<a href="/whats-new/events/london-vegfest-0" class="more-link">(Read More)</a></p> 
+                        <p><em>素食主义者协会</em> 为能成为今年在英国伦敦举行的素食节的荣誉客人而倍感兴奋。我们一直...<a href="/whats-new/events/london-vegfest-0" class="more-link">(阅读更多)</a></p> 
                       </div>
                     </div>  
                   </div>
