--- a/app/views/admin/nodes/_form.html.erb
+++ b/app/views/admin/nodes/_form.html.erb
@@ -5,7 +5,9 @@
 <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
 <%= f.input :title, label: '标题' %>
 
-<%#= f.input :url, label: '链接' %>
+<%= f.input :content, as: :kindeditor, label: '内容', input_html: {window_onload: true} %>
+
+<%= f.input :banner_type, label: '页头图片' %>
 
 <div class="control-group">
   <div class="controls">
