--- a/app/views/admin/nodes/index.html.erb
+++ b/app/views/admin/nodes/index.html.erb
@@ -3,26 +3,14 @@
 <table class="table table-bordered">
   <thead>
     <tr>
-      <% eval(@nodes.first.type).attribute_names.each do |name| %>
-      <th><%= col_name name %></th>
-      <% end %>
+      <th>标题</th>
       <th>操作</th>
     </tr>
   </thead>
   <tbody>
     <% @nodes.each do |node| %>
     <tr>
-      <% eval(node.type).attribute_names.each do |attr| %>
-         <% if attr == "image" %>
-         <td><%=image_tag node.image_url(:thumb) %></td>
-         <% elsif attr == "video" %>
-         <td><%= node.video_url %></td>
-         <% elsif attr == "published_at" %>
-         <td><%= node.read_attribute(attr).to_s(:db) %></td>
-         <% else %>
-        <td><%= node.read_attribute(attr) %></td>
-        <% end %>
-      <% end %>
+      <td><%= node.title %></td>
       <td>
         <%= link_to '编辑', edit_admin_node_path(node, category: params[:category]) %>
         <%= link_to '删除', admin_node_path(node, category: params[:category]), method: :delete, data: { confirm: '确定删除吗?' } %>
@@ -33,6 +21,6 @@
 </table>
 <% else %>
 <div>
-   暂无内容
+ 暂无内容
 </div>
 <% end %>
