--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -4,7 +4,6 @@
   <title>Chinese Vegan Society 后台管理</title>
   <%= render "basic_css" %>
   <%= stylesheet_link_tag 'admin', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -38,5 +37,6 @@
     <% end %>
     <%= yield %>
   </div>
+  <%= javascript_include_tag 'admin' %>
 </body>
 </html>
