--- a/app/views/admin/nodes/index.html.erb
+++ b/app/views/admin/nodes/index.html.erb
@@ -10,7 +10,7 @@
   <tbody>
     <% @nodes.each do |node| %>
     <tr>
-      <td><%= node.title %></td>
+      <td><%= link_to node.title, node, target: "_blank" %></td>
       <td>
         <%= link_to '编辑', edit_admin_node_path(node, category: params[:category]) %>
         <%= link_to '删除', admin_node_path(node, category: params[:category]), method: :delete, data: { confirm: '确定删除吗?' } %>
