--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -4,6 +4,8 @@
   <title>Chinese Vegan Society 后台管理</title>
   <%= render "basic_css" %>
   <%= stylesheet_link_tag 'admin', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'admin' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -37,7 +39,6 @@
     <% end %>
     <%= yield %>
   </div>
-  <%= javascript_include_tag 'admin' %>
   <%= yield :script %>
 </body>
 </html>
