--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -20,8 +20,10 @@
             <h2 class="element-invisible">你在这：</h2>
             <div class="breadcrumb">
               <a href="/">首页</a>
+              <% if @node.ancestors[1, 100].any? %>
               <% @node.ancestors[1, 100].each do |parent| %>
               » <a href="/nodes/<%= parent.id %>"><%= parent.title %></a>
+              <% end %>
               <% end %>
             </div> » <%= @node.title %>            
           </div>
