make-it-official

--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -51,6 +51,23 @@
 .news_link span{ font-size: 136px; color: #01dcd9; display: block; background: url('<%= image_url "line.jpg" %>') right center no-repeat; background-size: 2px 60%;}
 .news_link a:hover span{ color: #ff9e16;}
 .news_link b{ padding-top: 9%; width: 40%; display: inline-block; font: bold 14px/20px "Microsoft YaHei";}
+
+/*change index*/
+.make-it-official{
+  -moz-transform:skewY(-1.5deg) translate3d(0,0,0);
+  -ms-transform:skewY(-1.5deg) translate3d(0,0,0);
+  -o-transform:skewY(-1.5deg) translate3d(0,0,0);
+  -webkit-transform:skewY(-1.5deg) translate3d(0,0,0);
+  transform:skewY(-1.5deg) translate3d(0,0,0);
+}
+.make-it-official .skew{
+  -moz-transform:skewY(1.5deg) translate3d(0,0,0);
+  -ms-transform:skewY(1.5deg) translate3d(0,0,0);
+  -o-transform:skewY(1.5deg) translate3d(0,0,0);
+  -webkit-transform:skewY(1.5deg) translate3d(0,0,0);
+  transform:skewY(1.5deg) translate3d(0,0,0);
+}
+
 @media (max-width:55em){
 	.news_box{ margin-top: 7%;}
 	.news_link{ width: 25%;}
