--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="skew">
     <div class="container">
 
-      <a href="/" class="site-logo">
+      <a href="/nodes/2" class="site-logo">
         <%= image_tag "origin/logo.png" %>
       </a>
       <a href="#" class="mobile-nav">
@@ -23,7 +23,7 @@
           <li class="menu-1027"><a href="/try-vegan" title="">尝试素食</a></li>
           <li class="menu-1034"><a href="/take-action" title="">采取行动</a></li>
           <li class="menu-1046"><a href="/resources" title="">资源</a></li>
-          <li class="menu-1060"><a href="/your-business" title="">你的业务</a></li>
+          <li class="menu-1060"><a href="/nodes/1" title="">你的业务</a></li>
           <li class="menu-1066"><a href="/society" title="">社会</a></li>
           <li class="menu-1150 last"><a href="/shop" title="">商店</a></li>
         </ul>
