--- a/app/views/nodes/whats_news.html.erb
+++ b/app/views/nodes/whats_news.html.erb
@@ -15,24 +15,24 @@
         <div class="news_box clearfix">
           <div class="news_link">
             <p>
-              <a href="#"><span class="icon-bag"></span><b class="theme_title">市场活动市场活动活动</b></a>
+              <a href="#"><span class="icon-bag"></span><b class="theme_title">事件</b></a>
             </p>
           </div>
-          <div class="news_link">
+          <!-- <div class="news_link">
             <p>
               <a href="#"><span class="icon-earth"></span><b class="theme_title">市场活动市场活动活动新闻</b></a>
             </p>
-          </div>
+          </div> -->
           <div class="news_link">
             <p>
               <a href="#"><span class="icon-gift"></span><b class="theme_title">活动</b></a>
             </p>
           </div>
-          <div class="news_link">
+          <!-- <div class="news_link">
             <p>
               <a href="#"><span class="icon-people"></span><b class="theme_title">市场活动市场活动活动工作</b></a>
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
