--- a/app/views/admin/nodes/_form.html.erb
+++ b/app/views/admin/nodes/_form.html.erb
@@ -8,8 +8,9 @@
 <%= f.input :parent_id, collection: Node.sellect_list, label: '父级文章或列表' %>
 <%= f.input :page_type, collection: Node::PageType, label: '展示类型' %>
 
+<% if @node.new_record? || @node.page_type == 'show' %>
 <%= f.input :content, as: :kindeditor, label: '内容', input_html: {window_onload: true, filterMode: false} %>
-
+<% end %>
 <%#= f.input :banner_type, label: '页头图片' %>
 
 <div class="control-group">
