--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -20,11 +20,11 @@
       <div class="site-nav">
         <ul class="site-nav__item">
           <li class="menu-1092 first"><%= link_to "什么是新的?", whats_news_nodes_path %></li>
-          <li class="menu-1027"><a href="/try-vegan" title="">尝试素食</a></li>
-          <li class="menu-1034"><a href="/take-action" title="">采取行动</a></li>
-          <li class="menu-1046"><a href="/resources" title="">资源</a></li>
+          <li class="menu-1027"><a href="/nodes/55" title="">尝试素食</a></li>
+          <li class="menu-1034"><a href="/nodes/56" title="">采取行动</a></li>
+          <li class="menu-1046"><a href="/nodes/57" title="">资源</a></li>
           <li class="menu-1060"><a href="/nodes/1" title="">你的业务</a></li>
-          <li class="menu-1066"><a href="/society" title="">社会</a></li>
+          <li class="menu-1066"><a href="/nodes/58" title="">社会</a></li>
           <li class="menu-1150 last"><a href="/shop" title="">商店</a></li>
         </ul>
       </div> <!-- /#main-menu -->
