--- a/app/views/application/_mobile_nav_list.html.erb
+++ b/app/views/application/_mobile_nav_list.html.erb
@@ -1,10 +1,10 @@
 <div class="mobile-nav-list">
-  <ul class="mobile-site-nav"><li class="menu-1092 first"><a href="/nodes/whats_news" title="">What's New?</a></li>
-    <li class="menu-1027"><a href="/try-vegan" title="">Try vegan</a></li>
-    <li class="menu-1034"><a href="/take-action" title="">Take action</a></li>
-    <li class="menu-1046"><a href="/resources" title="">Resources</a></li>
-    <li class="menu-1060"><a href="/your-business" title="">Your Business</a></li>
-    <li class="menu-1066"><a href="/society" title="">The Society</a></li>
-    <li class="menu-1150 last"><a href="/shop" title="">Shop</a></li>
+  <ul class="mobile-site-nav">
+    <li class="menu-1092 first"><a href="/nodes/whats_news" title="">What's New?</a></li>
+    <li class="menu-1027"><a href="/nodes/55" title="">尝试素食</a></li>
+    <li class="menu-1034"><a href="/nodes/56" title="">采取行动</a></li>
+    <li class="menu-1046"><a href="/nodes/57" title="">资源</a></li>
+    <li class="menu-1060"><a href="/nodes/1" title="">你的业务</a></li>
+    <li class="menu-1066"><a href="/nodes/58" title="">社会</a></li>
   </ul>
 </div> 
