app/views/welcome/index.html.erb

--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -67,7 +67,8 @@
   -webkit-transform:skewY(1.5deg) translate3d(0,0,0);
   transform:skewY(1.5deg) translate3d(0,0,0);
 }
-
+.index-block-list{ width: 50%; padding-left: 4%;}
+.index-page-content{font-size: 0;}
 @media (max-width:55em){
 	.news_box{ margin-top: 7%;}
 	.news_link{ width: 25%;}
@@ -84,6 +85,8 @@
 	.news_link{ width: 25%;}
 	.news_link span{ font-size:50px;}
 	.news_link b{ padding-top: 5%; width: 46%;}
+	.index-block-list{padding-left: 4%;}
+	.index-page-content .index-block-list:first-child{padding-left: 0;}
 }
 
 @media (max-width:320px){
