--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,43 +38,32 @@
 
           <aside class="page-sidebar">
             <h2 class="try-it__title">
-              <a href="/try-vegan/get-support">
-                Try it for a month
-              </a>
+              <a href="/try-vegan/get-support">尝试它一个月</a>
             </h2>
 
 
-            <p>We're here to help you 'try vegan' for a single week or month.   </p>
-            <a href="/try-vegan/get-support" class="button try-it__button">Go!</a>
+            <p>我们在这里帮你“尝试素食”一个月或一周</p>
+            <a href="/try-vegan/get-support" class="button try-it__button">去看看!</a>
           </aside>
 
-          <div class="page-content">
-            <div class="home-search__panel">
-              <div class="home-search">
-                <h3 class="home-search__title">
-                  <a href="/whats-new/campaigns/love-vegan">Love Vegan</a>
-                </h3>
-                <p>
-                  It’s not just vegans who love vegan living. It’s for everyone.          
-                </p>
-                <a href="/whats-new/campaigns/love-vegan" class="button take-action__button">Love</a>
-              </div>
-
-
-              <form class="home-search" action="/recipe-search" method="get">
-                <fieldset>
-                  <label class="home-search__title">
-                    <a href="/resources/recipes">Recipes</a>
-                  </label>
-                  <p>
-                    We're about to rock your world with mind-blowing vegan food!    
-                  </p>
-                  <div class="form-item">
-                    <input type="text" name="combine" placeholder="Recipe">
-                  </div>
-                  <button class="button quick-search__button" type="submit">Search</button>
-                </fieldset>
-              </form>
+          <div class="page-content index-page-content">
+            <div class="block-list__panel index-block-list">
+              <div class="block-list__image">
+                <a href="javascript:void(0)"><%= image_tag "origin/WhyGoVegan_724x352.jpg", width: "724px", height: "352px" ,alt:"" ,typeof:"foaf:Image" %></a>
+              </div>  
+              <h2 class="block-list__title"><a href="/nodes/19">为什么选择素食</a></h2>  
+              <div class="block-list__excerpt">
+                <p>对动物以及我们的地球来说，素食是更健康、更绿色、更环保的饮食方式</p>
+              </div>  
+            </div>
+            <div class="block-list__panel index-block-list">
+              <div class="block-list__image">
+                <a href="javascript:void(0)"><%= image_tag "origin/Definition_724x352.jpg", width: "724px", height: "352px" ,alt:"" ,typeof:"foaf:Image" %></a>
+              </div>  
+              <h2 class="block-list__title"><a href="/nodes/19">素食主义的定义</a></h2>  
+              <div class="block-list__excerpt">
+                <p>什么是素食者？什么是素食？素食主义意味着什么？</p>
+              </div>  
             </div>
           </div>
 
