--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4931,3 +4931,8 @@ html[xmlns] .slides{
   ;
 }
 
+.index-block-list{ width: 50%; padding-left: 4%;}
+.index-page-content{font-size: 0;}
+@media (max-width:480px){
+  .index-page-content .index-block-list:first-child{padding-left: 0;}
+}
