--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -84,48 +84,6 @@
             </div>
           </div>
         </div>
-
-        <div class="container">
-          <div class="block-list list1">
-
-            <div class="block-list__panel">
-              <a href="/take-action/donate/donate-just-%C2%A35-month">
-                <%= image_tag "origin/5permonth_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
-              </a>
-              <h2 class="block-list__title">
-                <a href="/take-action/donate/donate-just-%C2%A35-month">Donate just £5 a month</a>
-              </h2>
-              <p class="block-list__excerpt">
-                Help change the world for £1.25 a week, the price of a cup of coffee.        
-              </p>
-            </div>
-
-            <div class="block-list__panel">
-              <a href="/try-vegan/why-go-vegan">
-                <%= image_tag "origin/WhyGoVegan_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
-              </a>
-              <h2 class="block-list__title">
-                <a href="/try-vegan/why-go-vegan">Why go vegan?</a>
-              </h2>
-              <p class="block-list__excerpt">
-                Healthier, greener, kinder to animals and to our planet's future.       
-              </p>
-            </div>
-
-            <div class="block-list__panel">
-              <a href="/try-vegan/definition-veganism">
-                <%= image_tag "origin/Definition_724x352.jpg", width: "420", draggable: "true", typeof: "foaf:Image" %>
-              </a>
-              <h2 class="block-list__title">
-                <a href="/try-vegan/definition-veganism">Definition of veganism</a>
-              </h2>
-              <p class="block-list__excerpt">
-                What is a vegan and vegan food? What does veganism mean?      
-              </p>
-            </div>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -135,43 +93,26 @@
 
           <aside class="page-sidebar--right">
             <h2 class="take-action__title">
-              <a href="/take-action">Take action</a>
+              <a href="/nodes/56">采取行动</a>
             </h2>
-            <p class="take-action__excerpt take-action__intro">
-              There are many different things you can do to help advance veganism in a positive and significant way.       
-            </p>
+            <p class="take-action__excerpt take-action__intro">有许多事你们可以做,通过积极重要的方式来帮助促进素食主义。</p>
           </aside>
 
           <div class="page-content">
             <div class="take-action__inner-container">
-
               <div class="take-action__panel">
                 <h3 class="take-action__sub-title">
-                  <a href="/take-action/donate">Donate</a>
+                  <a href="/nodes/3">热爱素食生活</a>
                 </h3>
-                <p class="take-action__excerpt">Big or small, donations are vital for our work around the globe.   </p>
-                <a href="/take-action/donate" class="button take-action__button">Give</a>
+                <p class="take-action__excerpt">不仅仅是素食主义者喜欢素食生活，每个人都会喜欢的。</p>
+                <a href="/nodes/3" class="button take-action__button">喜欢</a>
               </div>
               <div class="take-action__panel">
                 <h3 class="take-action__sub-title">
-                  <a href="/take-action/join-us">Join us</a>
+                  <a href="/nodes/21">志愿者</a>
                 </h3>
-                <p class="take-action__excerpt">Become a member, united we are stronger.</p>
-                <a href="/take-action/join-us" class="button take-action__button">Join</a>
-              </div>
-              <div class="take-action__panel">
-                <h3 class="take-action__sub-title">
-                  <a href="/shop">Shop</a>
-                </h3>
-                <p class="take-action__excerpt">Support our work while discovering exciting new vegan products.    </p>
-                <a href="/shop" class="button take-action__button">Shop</a>
-              </div>
-              <div class="take-action__panel">
-                <h3 class="take-action__sub-title">
-                  <a href="/take-action/volunteer">Volunteer</a>
-                </h3>
-                <p class="take-action__excerpt">There are a variety of ways to volunteer with us.   </p>
-                <a href="/take-action/volunteer" class="button take-action__button volunteer-sign-up">Sign up</a>
+                <p class="take-action__excerpt">有很多跟我们做志愿的方式。</p>
+                <a href="/nodes/21" class="button take-action__button volunteer-sign-up">报名参加</a>
               </div>
             </div>
           </div>
