--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -4930,6 +4930,21 @@ html[xmlns] .slides{
   cursor:default;
   ;
 }
+/*change index*/
+.make-it-official{
+  -moz-transform:skewY(-1.5deg) translate3d(0,0,0);
+  -ms-transform:skewY(-1.5deg) translate3d(0,0,0);
+  -o-transform:skewY(-1.5deg) translate3d(0,0,0);
+  -webkit-transform:skewY(-1.5deg) translate3d(0,0,0);
+  transform:skewY(-1.5deg) translate3d(0,0,0);
+}
+.make-it-official .skew{
+  -moz-transform:skewY(1.5deg) translate3d(0,0,0);
+  -ms-transform:skewY(1.5deg) translate3d(0,0,0);
+  -o-transform:skewY(1.5deg) translate3d(0,0,0);
+  -webkit-transform:skewY(1.5deg) translate3d(0,0,0);
+  transform:skewY(1.5deg) translate3d(0,0,0);
+}
 
 .index-block-list{ width: 50%; padding-left: 4%;}
 .index-page-content{font-size: 0;}
